--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/googlemaps": "^3.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/googlemaps": "^3.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
