--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
     "@react-google-maps/api": "^2.20.6",
+    "chart.js": "^4.4.8",
     "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
