--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
     "@react-google-maps/api": "^2.20.6",
+    "@types/react-slick": "^0.23.13",
     "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
