--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chart.js": "^4.4.8",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "next": "15.1.6",
+    "next": "^15.2.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
