Se arreglo el problema de configuracion de jest, agregando sus tipados en el archivo tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "paths": {
       "@/*": ["./*"]
     },
+
+    //Tipado para permitir usarse funciones de jest-dom
     "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "store/LoadingSpinner.tsx"],
