--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "^15.2.2",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "next-intl": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
