--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@types/react-slick": "^0.23.13",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "^15.2.2",
