--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "next": "^15.2.2",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.1.0",
